# AppLogging

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
AppLogging/: __init__.py
