[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "AppLogging"
version = "1.0.0"
authors = [
    { name = "Zach Reid", email = "zforge.devhub@gmail.com" },
]
description = "A drop-in, singleton logging module for Python applications."
dependencies = [
    "pathvalidate~=3.3.1"
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License"
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/zachreid-96/AppLogging"
Issues = "https://github.com/zachreid-96/AppLogging/issues"